// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IssuanceTableMobileItem renders correctly issuance and click header 1`] = `
<div>
  <div
    class="chakra-accordion css-0"
  >
    <div
      class="chakra-accordion__item css-1obe73b"
    >
      <h2>
        <button
          aria-controls="accordion-panel-:r2:"
          aria-expanded="true"
          class="chakra-accordion__button css-1kfav1u"
          data-index="0"
          data-testid="expand-accordion"
          id="accordion-button-:r2:"
          type="button"
        >
          <div
            class="css-13buc9q"
          >
            <div
              class="css-xrub82"
            >
              <div
                class="css-0"
              >
                <p
                  class="chakra-text css-uwkl65"
                >
                  Vintage
                </p>
                <p
                  class="chakra-text css-0"
                >
                  2010
                </p>
              </div>
              <div
                class="css-0"
              >
                <p
                  class="chakra-text css-uwkl65"
                >
                  Quantity
                </p>
                <p
                  class="chakra-text css-0"
                >
                  191
                </p>
              </div>
            </div>
            <svg
              class="chakra-icon css-n059si"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M6.86576 14.7862C6.72088 14.6414 6.64844 14.4657 6.64844 14.2593C6.64844 14.0529 6.72088 13.8773 6.86576 13.7324L11.36 9.23817C11.4536 9.14459 11.5523 9.07856 11.6561 9.0401C11.76 9.00165 11.8721 8.98242 11.9927 8.98242C12.1132 8.98242 12.2254 9.00165 12.3292 9.0401C12.433 9.07856 12.5318 9.14459 12.6253 9.23817L17.1446 13.7574C17.283 13.8959 17.3523 14.0632 17.3523 14.2593C17.3523 14.4555 17.2747 14.6311 17.1196 14.7862C16.9747 14.9311 16.7991 15.0035 16.5927 15.0035C16.3863 15.0035 16.2106 14.9311 16.0658 14.7862L11.9927 10.7131L7.89456 14.8112C7.75611 14.9497 7.58881 15.0189 7.39266 15.0189C7.19651 15.0189 7.02088 14.9414 6.86576 14.7862Z"
                fill="currentColor"
              />
            </svg>
          </div>
        </button>
      </h2>
      <div
        class="chakra-collapse"
        style="overflow: hidden; display: block; opacity: 0; height: auto;"
      >
        <div
          aria-labelledby="accordion-button-:r2:"
          class="chakra-accordion__panel css-old1by"
          id="accordion-panel-:r2:"
          role="region"
        >
          <div
            class="css-1ow11qq"
          >
            <div
              class="css-0"
            >
              <p
                class="chakra-text css-uwkl65"
              >
                Units Available
              </p>
              <p
                class="chakra-text css-0"
              >
                191
              </p>
            </div>
            <div
              class="css-0"
            >
              <p
                class="chakra-text css-uwkl65"
              >
                Verification Report Date
              </p>
              <p
                class="chakra-text css-0"
              >
                2020/03/04
              </p>
            </div>
          </div>
          <div
            class="css-gl17gz"
          >
            <a
              class="chakra-link css-0"
              data-testid="expand-more-details"
              href="/issuance?id=00cfede2-5701-4237-b7cf-8b962ba02aa5"
            >
              More Details
            </a>
            <button
              class="chakra-button css-4xx2wk"
              data-testid="issuance-mobile-item-click"
              type="button"
            >
              View Retirements
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`IssuanceTableMobileItem renders correctly issuance and click header and more details 1`] = `
<div>
  <div
    class="chakra-accordion css-0"
  >
    <div
      class="chakra-accordion__item css-1obe73b"
    >
      <h2>
        <button
          aria-controls="accordion-panel-:r4:"
          aria-expanded="true"
          class="chakra-accordion__button css-1kfav1u"
          data-index="0"
          data-testid="expand-accordion"
          id="accordion-button-:r4:"
          type="button"
        >
          <div
            class="css-13buc9q"
          >
            <div
              class="css-xrub82"
            >
              <div
                class="css-0"
              >
                <p
                  class="chakra-text css-uwkl65"
                >
                  Vintage
                </p>
                <p
                  class="chakra-text css-0"
                >
                  2010
                </p>
              </div>
              <div
                class="css-0"
              >
                <p
                  class="chakra-text css-uwkl65"
                >
                  Quantity
                </p>
                <p
                  class="chakra-text css-0"
                >
                  191
                </p>
              </div>
            </div>
            <svg
              class="chakra-icon css-n059si"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M6.86576 14.7862C6.72088 14.6414 6.64844 14.4657 6.64844 14.2593C6.64844 14.0529 6.72088 13.8773 6.86576 13.7324L11.36 9.23817C11.4536 9.14459 11.5523 9.07856 11.6561 9.0401C11.76 9.00165 11.8721 8.98242 11.9927 8.98242C12.1132 8.98242 12.2254 9.00165 12.3292 9.0401C12.433 9.07856 12.5318 9.14459 12.6253 9.23817L17.1446 13.7574C17.283 13.8959 17.3523 14.0632 17.3523 14.2593C17.3523 14.4555 17.2747 14.6311 17.1196 14.7862C16.9747 14.9311 16.7991 15.0035 16.5927 15.0035C16.3863 15.0035 16.2106 14.9311 16.0658 14.7862L11.9927 10.7131L7.89456 14.8112C7.75611 14.9497 7.58881 15.0189 7.39266 15.0189C7.19651 15.0189 7.02088 14.9414 6.86576 14.7862Z"
                fill="currentColor"
              />
            </svg>
          </div>
        </button>
      </h2>
      <div
        class="chakra-collapse"
        style="overflow: hidden; display: block; opacity: 0; height: auto;"
      >
        <div
          aria-labelledby="accordion-button-:r4:"
          class="chakra-accordion__panel css-old1by"
          id="accordion-panel-:r4:"
          role="region"
        >
          <div
            class="css-1ow11qq"
          >
            <div
              class="css-0"
            >
              <p
                class="chakra-text css-uwkl65"
              >
                Units Available
              </p>
              <p
                class="chakra-text css-0"
              >
                191
              </p>
            </div>
            <div
              class="css-0"
            >
              <p
                class="chakra-text css-uwkl65"
              >
                Verification Report Date
              </p>
              <p
                class="chakra-text css-0"
              >
                2020/03/04
              </p>
            </div>
          </div>
          <div
            class="css-gl17gz"
          >
            <a
              class="chakra-link css-0"
              data-testid="expand-more-details"
              href="/issuance?id=00cfede2-5701-4237-b7cf-8b962ba02aa5"
            >
              More Details
            </a>
            <button
              class="chakra-button css-4xx2wk"
              data-testid="issuance-mobile-item-click"
              type="button"
            >
              View Retirements
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`IssuanceTableMobileItem renders correctly issuances 1`] = `
<div>
  <div
    class="chakra-accordion css-0"
  >
    <div
      class="chakra-accordion__item css-1obe73b"
    >
      <h2>
        <button
          aria-controls="accordion-panel-:r0:"
          aria-expanded="false"
          class="chakra-accordion__button css-1kfav1u"
          data-index="0"
          data-testid="expand-accordion"
          id="accordion-button-:r0:"
          type="button"
        >
          <div
            class="css-13buc9q"
          >
            <div
              class="css-xrub82"
            >
              <div
                class="css-0"
              >
                <p
                  class="chakra-text css-uwkl65"
                >
                  Vintage
                </p>
                <p
                  class="chakra-text css-0"
                >
                  2010
                </p>
              </div>
              <div
                class="css-0"
              >
                <p
                  class="chakra-text css-uwkl65"
                >
                  Quantity
                </p>
                <p
                  class="chakra-text css-0"
                >
                  191
                </p>
              </div>
            </div>
            <svg
              class="chakra-icon css-n059si"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12.0045 15.0135C11.8904 15.0135 11.7798 14.9942 11.6728 14.9558C11.5657 14.9173 11.4654 14.8513 11.3718 14.7577L6.86221 10.2481C6.71734 10.1032 6.64747 9.93014 6.65261 9.72886C6.65772 9.52758 6.73272 9.3545 6.87761 9.20964C7.02247 9.06477 7.19811 8.99234 7.40451 8.99234C7.61091 8.99234 7.78654 9.06477 7.93141 9.20964L12.0045 13.2827L16.093 9.19426C16.2378 9.04939 16.4109 8.97952 16.6122 8.98464C16.8135 8.98977 16.9865 9.06477 17.1314 9.20964C17.2763 9.3545 17.3487 9.53015 17.3487 9.73656C17.3487 9.94296 17.2763 10.1186 17.1314 10.2635L12.6372 14.7577C12.5436 14.8513 12.4449 14.9173 12.341 14.9558C12.2372 14.9942 12.125 15.0135 12.0045 15.0135Z"
                fill="currentColor"
              />
            </svg>
          </div>
        </button>
      </h2>
      <div
        class="chakra-collapse"
        style="overflow: hidden; display: none; opacity: 0; height: 0px;"
      >
        <div
          aria-labelledby="accordion-button-:r0:"
          class="chakra-accordion__panel css-old1by"
          id="accordion-panel-:r0:"
          role="region"
        >
          <div
            class="css-1ow11qq"
          >
            <div
              class="css-0"
            >
              <p
                class="chakra-text css-uwkl65"
              >
                Units Available
              </p>
              <p
                class="chakra-text css-0"
              >
                191
              </p>
            </div>
            <div
              class="css-0"
            >
              <p
                class="chakra-text css-uwkl65"
              >
                Verification Report Date
              </p>
              <p
                class="chakra-text css-0"
              >
                2020/03/04
              </p>
            </div>
          </div>
          <div
            class="css-gl17gz"
          >
            <a
              class="chakra-link css-0"
              data-testid="expand-more-details"
              href="/issuance?id=00cfede2-5701-4237-b7cf-8b962ba02aa5"
            >
              More Details
            </a>
            <button
              class="chakra-button css-4xx2wk"
              data-testid="issuance-mobile-item-click"
              type="button"
            >
              View Retirements
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
